// protoc --go_out=./payment --go-grpc_out=./payment payment/payment.proto
syntax = "proto3";

option go_package = "./paymentPb";

package payment;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
  rpc CheckPaymentStatus (PaymentStatusRequest) returns (PaymentResponse);
  rpc CancelPayment (PaymentStatusRequest) returns (PaymentResponse);
  rpc HandlePaymentCallback (PaymentCallbackRequest) returns (PaymentResponse);
  rpc HandlePaymentNotification(PaymentNotificationRequest) returns (PaymentNotificationResponse);
}

message PaymentRequest {
  string booking_id = 1;
  float amount = 2;
  string user_id = 3;
  string payment_type = 4;
}

message PaymentStatusRequest {
  string payment_id = 1;
}

message PaymentCallbackRequest {
  string payment_id = 1;
  PaymentStatus status = 2;
}

message PaymentResponse {
  string payment_id = 1;
  string booking_id = 2;
  string user_id = 3;
  float amount = 4;
  PaymentStatus status = 5;
  string created_at = 6;
  string updated_at = 7;
  string expires_at = 8;
  PaymentDetails details = 9;
}

message PaymentDetails {
  string redirect_url = 1; // Untuk e-wallet
  string virtual_account = 2; // Untuk Bank Transfer
  string qr_code_url = 3; // Untuk QRIS
}

message PaymentNotificationRequest {
  string order_id = 1;
  string transaction_id = 2; 
  string transaction_status = 3;
  string payment_type = 4;
  string fraud_status = 5;
  float gross_amount = 6; 
  string callback_time = 7;
}

message PaymentNotificationResponse {
  bool success = 1;
  string message = 2;
}

enum PaymentStatus {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 2;
  REFUNDED = 3;
  CANCELLED = 4;
}
